--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <label for="jobTitle">Job Title:</label>
             <select id="jobTitle" name="jobTitle" required>
                 <option value="">Select Job Title</option>
-                <option value="Software Engineer">Software Engineer</option>
-                <option value="Data Analyst">Data Analyst</option>
-                <option value="Marketing Specialist">Marketing Specialist</option>
+                <option value="WebDeveloper">Web Developer</option>
+                <option value="GameDeveloper">Game Developer</option>
+                <option value="GeneralManager">General Manager</option>
                 <option value="Graphic Designer">Graphic Designer</option>
                 <option value="Project Manager">Project Manager</option>
             </select>
