--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
             <label for="jobTitle">Job Title:</label>
             <select id="jobTitle" name="jobTitle" required>
                 <option value="">Select Job Title</option>
-                <option value="job1">Job Title 1</option>
-                <option value="job2">Job Title 2</option>
-                <option value="job3">Job Title 3</option>
-                <option value="job4">Job Title 4</option>
-                <option value="job5">Job Title 5</option>
+                <option value="webdev">Web Developer</option>
+                <option value="gamedev">Game Developer</option>
+                <option value="graphicdesigner">Graphic Designer</option>
+                <option value="gameconcept">Game Concept Creator</option>
             </select>
         </div>
         <input type="submit" value="Submit">
