--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Job Application Form</title>
+<title>CTG Application Form</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -52,7 +52,7 @@
 <body>
 
 <div class="container">
-    <h2>Job Application Form</h2>
+    <h2>CTG Application Form</h2>
     <form id="jobApplicationForm">
         <div class="form-group">
             <label for="fullName">Full Name:</label>
