--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         fetch(url)
             .then(function(response) {
                 if (response.ok) {
-                    alert("Notification sent successfully!");
+                    console.log("Submitted!);
+                    alert("Submitted, within 24 hrs you will recive an email from codetestgroup@outlook.com!");
                 } else {
                     alert("Failed to send notification. Please try again later.");
                 }
